ACMW-0065: Fixed the size of home page images on mobile

--- a/src/components/home/membership/membership.scss
+++ b/src/components/home/membership/membership.scss
@@ -94,4 +94,11 @@
         }
     }
 
-  } 
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .Membership-tease {
+        height: 100%;
+        background-size: cover;
+  }
+}
